[package]
name = "teia"
version = "0.1.0"
authors = ["Shotaro Tsuji <Shotaro.Tsuji@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A crate which implements persistent homology algorithm"
keywords = ["topology", "homology", "persistence", "persistent homology"]
readme = "README.md"
repository = "https://github.com/ShotaroTsuji/teia"
edition = "2018"

[dependencies]
num-traits = "0.2"
failure = "*"
structopt = "*"
botao = "0.1.0"
