[package]
name = "teia"
version = "0.1.0"
authors = ["Shotaro Tsuji <Shotaro.Tsuji@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A crate which implements persistent homology algorithm"
keywords = ["topology", "homology", "persistence"]
readme = "README.md"
repository = "https://github.com/ShotaroTsuji/teia"
edition = "2018"

[dependencies]
num-traits = "0.2"
failure = "0.1.5"
structopt = "0.2.14"
botao = "0.1.0"
itertools = "0.8.1"

[dev-dependencies]
nalgebra = "0.18"
rand = "0.7.3"
rand_distr = "0.2.2"
